k8s/orders/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: homework
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/actuator/prometheus"
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8004
  type: ClusterIP
